# pixman

./: meson.build  meson_options.txt  thread-test.c
demos/: meson.build
meson-cc-tests/: arm-iwmmxt-test.c  attribute-constructor-test.c  builtin-clz-test.c  float128-test.c  gcc-inline-asm-test.c  gcc-vector-extensions.c  loongson-mmi-test.c  mips-dspr2-test.c  mmx-test.c  sse2-test.c  ssse3-test.c  vmx-test.c
pixman/: meson.build  pixman.def
test/: meson.build
